--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,9 @@
 galaxy_info:
-  role_name: docker-influxdb
+  role_name: docker_influxdb
   author: Pavlo Bashynskyi
   description: Deploy InfluxDB Docker container
   license: MIT
-  min_ansible_version: 2.2
+  min_ansible_version: 2.3
   platforms:
     - name: Ubuntu
       versions:
